crates/cribo/tests/snapshots/execution_results@conditional_wildcard_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_wildcard_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "config module loaded\nmax_retries=3\ntimeout=30\napi_version=v2",
    stderr: "",
}
