crates/cribo/tests/snapshots/execution_results@cross_module_attribute_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/cross_module_attribute_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "v1.0.0 - Processed Data",
    stderr: "",
}
