crates/cribo/tests/snapshots/execution_results@cross_module_inheritance.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/cross_module_inheritance/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Created proxy auth: <HTTPProxyAuth user=user>\nCreated basic auth: <HTTPBasicAuth user=user2>\n✓ All tests passed",
    stderr: "",
}
