crates/cribo/tests/snapshots/execution_results@early_module_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/early_module_reference/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Response: Mock response for GET https://example.com",
    stderr: "",
}
