crates/cribo/tests/snapshots/execution_results@entry_module_circular_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/entry_module_circular_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: Using console: console object",
    stderr: "",
}
