crates/cribo/tests/snapshots/execution_results@forward_reference_from_parent_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_from_parent_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "BaseClass: <class 'parent.base.BaseClass'>\nAnotherClass: <class 'parent.another.AnotherClass'>\nMyClass: <class 'parent.child.MyClass'>\nSubpkgClass: <class 'parent.subpkg.submodule.SubpkgClass'>\nBase value: base\nAnother value: another\nMy value: 42\nSubpkg value: subpkg\nSUCCESS: Forward reference from parent init handled correctly",
    stderr: "",
}
